--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Test</title>
+		<link rel="stylesheet" href="~/index.css" />
 	</head>
 	<body>
 		<h1>The test worked!</h1>
