watch form submission

--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>The test worked!</h1>
-		<form method="POST" action="~/submit">
+		<form>
 			<label> Response: <input type="text" name="response" /> </label>
 			<button type="submit">Submit</button>
 		</form>
