--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Test</title>
-		<script type="module" src="/html/forms.js"></script>
+		<script src="/html/forms.js"></script>
 		<link rel="stylesheet" href="~/index.css" />
 		<link rel="icon" href="~/favicon.ico" />
 	</head>
