send ws msg to web page

--- a/test/other.html
+++ b/test/other.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
 	<head>
-		<script type="module" src="/html/forms.js"></script>
+		<script src="/html/forms.js"></script>
 		<link rel="stylesheet" href="~/index.css" />
 		<link rel="icon" href="~/favicon.ico" />
 	</head>
 	<body>
 		<form>
-			<h1>This is another HTML page!</h1>
+			<h1>The response was <q id="response">...</q></h1>
 			<button type="submit" name="action" value="home">Back to home</button>
 		</form>
+
+		<script src="~/other.js"></script>
 	</body>
 </html>
