--- a/test/index.html
+++ b/test/index.html
@@ -12,5 +12,6 @@
 			<label> Response: <input type="text" name="response" /> </label>
 			<button type="submit">Submit</button>
 		</form>
+		<p>Send <q>quit</q> as the response to quit.</p>
 	</body>
 </html>
