send msg back from js to app

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>The test worked!</h1>
 		<form>
-			<label> Response: <input type="text" name="response" /> </label>
+			<label> Response: <input type="text" name="response" autofocus /> </label>
 			<button type="submit">Submit</button>
 		</form>
 		<p>Send <q>quit</q> as the response to quit.</p>
