--- a/test/other.html
+++ b/test/other.html
@@ -8,7 +8,9 @@
 	<body>
 		<form>
 			<h1>The response was <q id="response">...</q></h1>
-			<button type="submit" name="action" value="home">Back to home</button>
+			<button autofocus type="submit" name="action" value="home">
+				Back to home
+			</button>
 		</form>
 
 		<script src="~/other.js"></script>
