Redirect form submits to loading screen
Fixed #2

--- a/example/loading/docroot/index.html
+++ b/example/loading/docroot/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Loading Screen Viewer</title>
 		<script src="/html/forms.js"></script>
+		<link rel="stylesheet" href="~/main.css" />
 	</head>
 	<body>
 		<form>
