add fps to snake

--- a/example/snake/docroot/index.html
+++ b/example/snake/docroot/index.html
@@ -7,6 +7,9 @@
 		<script src="~/snake.js"></script>
 	</head>
 	<body>
-		<canvas id="canvas" width="600" height="450"></canvas>
+		<main>
+			<canvas id="canvas" width="600" height="450"></canvas>
+		</main>
+		<footer><span id="frame-rate">00.00 fps</span></footer>
 	</body>
 </html>
